--- a/views/home.html
+++ b/views/home.html
@@ -7,6 +7,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css"
 rel="stylesheet" />
+<script src="https://kit.fontawesome.com/82d69982a4.js" crossorigin="anonymous"></script>
+
 <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet">
@@ -17,105 +19,118 @@ rel="stylesheet" />
 <body>
     <header>
         <div><img src="img/logo-mercado-liebre.svg" width="360" alt="logo mercado liebre"></div>
-        <div>Lugar para poner barra de busqueda</div>
-        <br>
-        <div>Comprá en cuotas y sin tarjeta de credito</div>
+    
+        <form action="/action_page.php">
+            <label for="fname"></label>
+            <input type="text" id="fname" name="fname" ><br><br>
         
-        <img src="img/img-home-banner.jpg"  width="360" alt="">
+        <br> </form>
+        <div><i class="fa-solid fa-hand-holding-dollar"></i>Comprá en cuotas y sin tarjeta de credito </div>
+   
+        <div><i class="fa-solid fa-magnifying-glass"></i></div>
         
         <nav>
-            <ul>
+            <ul class="lista-superior">
                 
                 
-                <li>Ofertas</li>
-                <li>tiendas oficiales</li>
-                <li>Vender</li>
-                <li>Ayuda</li>
+                
+               
+                
+                <li><a href="#">Ofertas</a></li>
+                <li><a href="#">tiendas oficiales</a></li>
+                <li><a href="#">Vender</a></li>
+                <li><a href="#">Ayuda</a></li>
                 <br>
-                <li>Creá tu cuenta  </li>
-                <li>Ingresá</li>
-                <li>Mis compras</li>
+                <li><a href="#">Creá tu cuenta<span class="iconMenu"><i class="fa-solid fa-id-card"></i></span> </a> </li>
+                <li><a href="#">Ingresá<span class="iconMenu"><i class="fa-solid fa-arrow-right-to-bracket"></i></span></a></li>
+                <li><a href="#">Mis compras<span class="iconMenu"><i class="fa-solid fa-bag-shopping"></i></span></a></li>
                 
             </ul>
-            <div class="burger-menu"> <button class="boton"><i class="fas fa-bars"></i></button>
-                
+            <div class="menu-burguer">
+                <i class="fa-solid fa-bars"></i>
                 </div>
 </nav>
 
     </header>
+    
     <main>
+        <img src="img/img-home-banner.jpg"  width="360" alt="banner de ofertas">
         <section>
             <h2>Basado en tu ultima vista</h2>
             <article>
                 <img src="img/img-cafetera-moulinex.jpg" width="360" alt="cafetera">
-                <h3>$6770</h3>
-                <h3>40% OFF</h3>
-                <h2 >Cafetera Moulinex</h2>
+                <p>$6770</p>
+                <p>40% OFF</p>
+                <h3>Cafetera Moulinex</h3>
             </article>
             <article>
                 <img src="img/img-macbook-pro-2019.jpg" width="360" alt="macbook">
-                <h3>$230.000</h3>
-                <h3>20% OFF</h3>
-                <h2 >MacBook Pro 2019</h2>
+                <p>$230.000</p>
+                <p>20% OFF</p>
+                <h3 >MacBook Pro 2019</h3>
             </article>
             <article>
                 <img src="img/img-samsung-galaxy-s10.jpg" width="360" alt="samsung-galaxy-s10">
-                <h3>$70.500</h3>
-                <h3>10% OFF</h3>
+                <p>$70.500</p>
+                <p>10% OFF</p>
                 <h3 >Samsung galaxy S10</h3>
             </article>
             <article>
                 <img src="img/img-tv-samsung-smart.jpg" width="360" alt="img-tv-samsung-smart">
-                <h3>$23.200</h3>
-                <h3>5% OFF</h3>
-                <h2 >SmartTv Samsung 43"</h2>
+                <p>$23.200</p>
+                <p>5% OFF</p>
+                <h3 >SmartTv Samsung 43"</h3>
             </article>
          </section>
          <h2>Seccion de ofertas</h2>
          <article>
             <img src="img/img-cafetera-moulinex.jpg" width="360" alt="img-cafetera-moulinex">
-            <h3>$6770</h3>
-            <h3>40% OFF</h3>
-            <h2 >Cafetera Moulinex</h2>
+            <p>$6770</p>
+            <p>40% OFF</p>
+            <h3 >Cafetera Moulinex</h3>
         </article>
         <article>
             <img src="img/img-macbook-pro-2019.jpg" width="360" alt="macbook">
-            <h3>$230.000</h3>
-            <h3>20% OFF</h3>
-            <h2 >MacBook Pro 2019</h2>
+            <p>$230.000</p>
+            <p>20% OFF</p>
+            <h3 >MacBook Pro 2019</h3>
         </article>
         <article>
             <img src="img/img-samsung-galaxy-s10.jpg" width="360" alt="samsung-galaxy-s10">
-            <h3>$70.500</h3>
-            <h3>10% OFF</h3>
-            <h2 >Samsung galaxy S10</h2>
+            <p>$70.500</p>
+            <p>10% OFF</p>
+            <h3>Samsung galaxy S10</h3>
         </article>
         <article>
             <img src="img/img-tv-samsung-smart.jpg" width="360" alt="img-tv-samsung-smart">
-            <h3>$23.200</h3>
-            <h3>5% OFF</h3>
-            <h2 >SmartTv Samsung 43"</h2>
+            <p>$23.200</p>
+            <p>5% OFF</p>
+            <h3>SmartTv Samsung 43"</h3>
         </article>
 
     </main>
     <footer>
-        <section class="pie">
-            
-               <h4>Pagá con tarjeta o en efectivo</h4>
+        <section>
+            <div class="iconFooter"><i class="fa-solid fa-credit-card"></i></div>
+            <h2>Pagá con tarjeta o en efectivo </i></h2>
            <p>Con Mercado Liebre Cash, tenés cuotas sin interés con tarjeta o efectivo en
-            puntos de pago. ¡Y siempre es seguro!</p>
-            <h4>Envío gratis desde $ 2.500</h4>
+            puntos de pago. ¡Y siempre es seguro!</p></section>
+        <section>
+            <div class="iconFooter"><i class="fa-solid fa-gift"></i></div>
+            <h2>Envío gratis desde $ 2.500</h2>
             <p>Solo por estar registrad@ en Mercado Liebre tenés envíos gratis en miles de
-                productos. Es un beneficio de Mercado Puntos.</p>
-            <h4>Seguridad, de principio a fin</h4>
+                productos. Es un beneficio de Mercado Puntos.</p></section>
+        <section>
+            <div class="iconFooter"><i class="fa-solid fa-user-shield"></i></div>
+            <h2>Seguridad, de principio a fin</h2>
             <p>¿No te gusta? ¡Devolvelo! En Mercado Liebre, no hay nada que no puedas hacer,
-                porque estás siempre protegid@.</p>
+                porque estás siempre protegid@.</p></section>
                 <br>
-            <p>Copyright © 1999-2020 MercadoLiebre S.R.L.</p>
-          
-
-        </section>
-    </footer>
+        <section>
+            
+            <p>Copyright © 1999-2020 MercadoLiebre S.R.L.</p></section>
+            
+               </footer>
 
 
 </body>
