--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -1,6 +1,22 @@
-section.pie{
-    text-align: center;
-}
+/* Paleta de colores
+Amarillo: #EAC926;
+Azul: #03264C;
+Celeste: #1259c3;
+Gris oscuro: #666;
+Gris claro: #ebebeb;
+Verde: #39b54a;
+
+● Tipografías
+Familia: 'Roboto'
+Nos envían esta demo de cómo cargar fuentes de Google Fonts. Además
+podemos consultar el siguiente recurso aquí, para más detalle.
+● Tamaños Tipográficos
+Cuerpos de texto: 12px
+Titulares (Basado en tu última visita/Ofertas): 24px
+Precios: 18px
+Descuentos: 16px
+Descripciones: 16px */
+
 
 
 
@@ -8,16 +24,45 @@ section.pie{
 header{
     background-color: #EAC926;
     background-size: cover;
-    font-family: "roboto"
+    font-family: "roboto";
+    font-size: 20px;
 }
 
-.boton{
-    
+
+footer {
+text-align: center;
+}
+footer section p {
+    color: #666;
+}
+
+.iconFooter{
+    text-align: center;
+    line-height: 10px;
+    font-size: 2em;
+    color:#1259c3
+}
+.iconMenu{
+    color: black
+}
+.menu-burguer{
+    /* display: flex;        
+        justify-content: center; */
+        text-align: center;
+
+}
+.menu-burguer i {
     background-color: #1259c3;
+    border-radius: 5px
     color: white;
-
+    margin-bottom: 10px;
+    margin-top: 10px;
+    padding: 10px;
 }
-div.burguer-menu{
-    justify-content: center;
-}
 
+.lista-superior{
+    list-style: none;
+}
+ul {
+    padding: 0
+}
