--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -24,45 +24,99 @@ Descripciones: 16px */
 header{
     background-color: #EAC926;
     background-size: cover;
-    font-family: "roboto";
+    font-family: "Roboto";
     font-size: 20px;
 }
-
-
-footer {
-text-align: center;
+.compra{
+    margin-top: 1px;
+    margin-left: 60px
 }
-footer section p {
-    color: #666;
+
+main h2{
+    font-size: 24px;
+}
+main .precio{
+    font-size: 18px;
+    
+}
+main .descuento{
+    font-size: 16px;
+    
+}
+main h3{
+    font-size: 16px ;
+    
 }
 
 .iconFooter{
-    text-align: center;
-    line-height: 10px;
+    color:#1259c3;
+    margin-bottom: 10px;
     font-size: 2em;
-    color:#1259c3
+    text-align: center;
 }
 .iconMenu{
     color: black
 }
 .menu-burguer{
-    /* display: flex;        
-        justify-content: center; */
-        text-align: center;
-
+    
+    text-align: center;
+    
 }
 .menu-burguer i {
     background-color: #1259c3;
-    border-radius: 5px
+    border-radius: 5px;
     color: white;
     margin-bottom: 10px;
     margin-top: 10px;
     padding: 10px;
+    text-align: center;
 }
 
 .lista-superior{
     list-style: none;
+    
+    color: black;
+    padding: 0;
+    color: black
 }
-ul {
-    padding: 0
+#fname{
+    color: #666
+}
+form div i{
+    background-color: white;
+    border: solid #666 1px;
+    padding: 2px
+    
+}
+
+form.formulario{
+    padding: 15px;
+    margin : 15px;
+    margin-bottom: 1px;
+}
+
+form div{
+    margin-bottom: 5px;
+}
+footer {
+    text-align: center;
+}
+footer section p {
+    color: #666;
+    margin-bottom: 50px;
+    margin-left: 20px;
+    margin-right: 32px;
+    margin-top: 1px;
+    padding-left: 66px;
+    padding-right: 59px;
+}
+footer h2{
+    color: #666;
+    
+    margin-bottom: 0px;
+    margin-top: 10px;
+}
+.copy{
+    text-align: left;
+    margin: 10px;
 }
