--- a/views/home.html
+++ b/views/home.html
@@ -20,14 +20,16 @@ rel="stylesheet" />
     <header>
         <div><img src="img/logo-mercado-liebre.svg" width="360" alt="logo mercado liebre"></div>
     
-        <form action="/action_page.php">
+        <form class="formulario" action="/action_page.php">
             <label for="fname"></label>
-            <input type="text" id="fname" name="fname" ><br><br>
-        
+            <input type="text" id="fname" name="fname" value="Buscar productos, marcas"><br>
+            
+            <div><i class="fa-solid fa-magnifying-glass"></i></div>
         <br> </form>
-        <div><i class="fa-solid fa-hand-holding-dollar"></i>Comprá en cuotas y sin tarjeta de credito </div>
+        
+        <div class="compra"><i class="fa-solid fa-hand-holding-dollar"></i>Comprá en cuotas y sin tarjeta de credito </div>
    
-        <div><i class="fa-solid fa-magnifying-glass"></i></div>
+     
         
         <nav>
             <ul class="lista-superior">
@@ -36,7 +38,7 @@ rel="stylesheet" />
                 
                
                 
-                <li><a href="#">Ofertas</a></li>
+                <li class="ofertas"><a href="#">Ofertas</a></li>
                 <li><a href="#">tiendas oficiales</a></li>
                 <li><a href="#">Vender</a></li>
                 <li><a href="#">Ayuda</a></li>
@@ -54,57 +56,57 @@ rel="stylesheet" />
     </header>
     
     <main>
-        <img src="img/img-home-banner.jpg"  width="360" alt="banner de ofertas">
+        <img src="img/img-home-banner.jpg"  width="100%" alt="banner de ofertas">
         <section>
             <h2>Basado en tu ultima vista</h2>
             <article>
                 <img src="img/img-cafetera-moulinex.jpg" width="360" alt="cafetera">
-                <p>$6770</p>
-                <p>40% OFF</p>
+                <p class="precio">$6770</p>
+                <p class="descuento">40% OFF</p>
                 <h3>Cafetera Moulinex</h3>
             </article>
             <article>
                 <img src="img/img-macbook-pro-2019.jpg" width="360" alt="macbook">
-                <p>$230.000</p>
-                <p>20% OFF</p>
+                <p class="precio">$230.000</p>
+                <p class="descuento">20% OFF</p>
                 <h3 >MacBook Pro 2019</h3>
             </article>
             <article>
                 <img src="img/img-samsung-galaxy-s10.jpg" width="360" alt="samsung-galaxy-s10">
-                <p>$70.500</p>
-                <p>10% OFF</p>
+                <p class="precio">$70.500</p>
+                <p class="descuento">10% OFF</p>
                 <h3 >Samsung galaxy S10</h3>
             </article>
             <article>
                 <img src="img/img-tv-samsung-smart.jpg" width="360" alt="img-tv-samsung-smart">
-                <p>$23.200</p>
-                <p>5% OFF</p>
+                <p class="precio">$23.200</p>
+                <p class="descuento">5% OFF</p>
                 <h3 >SmartTv Samsung 43"</h3>
             </article>
          </section>
          <h2>Seccion de ofertas</h2>
          <article>
             <img src="img/img-cafetera-moulinex.jpg" width="360" alt="img-cafetera-moulinex">
-            <p>$6770</p>
-            <p>40% OFF</p>
+            <p class="precio">$6770</p>
+            <p class="descuento">40% OFF</p>
             <h3 >Cafetera Moulinex</h3>
         </article>
         <article>
             <img src="img/img-macbook-pro-2019.jpg" width="360" alt="macbook">
-            <p>$230.000</p>
-            <p>20% OFF</p>
+            <p class="precio">$230.000</p>
+            <p class="descuento">20% OFF</p>
             <h3 >MacBook Pro 2019</h3>
         </article>
         <article>
             <img src="img/img-samsung-galaxy-s10.jpg" width="360" alt="samsung-galaxy-s10">
-            <p>$70.500</p>
-            <p>10% OFF</p>
+            <p class="precio">$70.500</p>
+            <p class="descuento">10% OFF</p>
             <h3>Samsung galaxy S10</h3>
         </article>
         <article>
             <img src="img/img-tv-samsung-smart.jpg" width="360" alt="img-tv-samsung-smart">
-            <p>$23.200</p>
-            <p>5% OFF</p>
+            <p class="precio">$23.200</p>
+            <p class="descuento">5% OFF</p>
             <h3>SmartTv Samsung 43"</h3>
         </article>
 
@@ -112,7 +114,7 @@ rel="stylesheet" />
     <footer>
         <section>
             <div class="iconFooter"><i class="fa-solid fa-credit-card"></i></div>
-            <h2>Pagá con tarjeta o en efectivo </i></h2>
+            <h2 >Pagá con tarjeta o en efectivo </i></h2>
            <p>Con Mercado Liebre Cash, tenés cuotas sin interés con tarjeta o efectivo en
             puntos de pago. ¡Y siempre es seguro!</p></section>
         <section>
@@ -128,7 +130,7 @@ rel="stylesheet" />
                 <br>
         <section>
             
-            <p>Copyright © 1999-2020 MercadoLiebre S.R.L.</p></section>
+            <p class="copy">Copyright © 1999-2020 MercadoLiebre S.R.L.</p></section>
             
                </footer>
 
