--- a/views/home.html
+++ b/views/home.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css"
 rel="stylesheet" />
 <script src="https://kit.fontawesome.com/82d69982a4.js" crossorigin="anonymous"></script>
@@ -18,7 +19,7 @@ rel="stylesheet" />
 
 <body>
     <header>
-        <div><img src="img/logo-mercado-liebre.svg" width="360" alt="logo mercado liebre"></div>
+        <div><img src="img/logo-mercado-liebre.svg" width="100%" alt="logo mercado liebre"></div>
     
         <form class="formulario" action="/action_page.php">
             <label for="fname"></label>
@@ -60,25 +61,30 @@ rel="stylesheet" />
         <section>
             <h2>Basado en tu ultima vista</h2>
             <article>
-                <img src="img/img-cafetera-moulinex.jpg" width="360" alt="cafetera">
+                <img  src="img/img-cafetera-moulinex.jpg" width="360" alt="cafetera">
+                <div class="truck" ><i class="fa-solid fa-truck"></i></div>
                 <p class="precio">$6770</p>
                 <p class="descuento">40% OFF</p>
                 <h3>Cafetera Moulinex</h3>
             </article>
             <article>
-                <img src="img/img-macbook-pro-2019.jpg" width="360" alt="macbook">
+                <img  src="img/img-macbook-pro-2019.jpg" width="360" alt="macbook">
+                <div class="truck" ><i class="fa-solid fa-truck"></i></div>
+                
                 <p class="precio">$230.000</p>
                 <p class="descuento">20% OFF</p>
                 <h3 >MacBook Pro 2019</h3>
             </article>
             <article>
                 <img src="img/img-samsung-galaxy-s10.jpg" width="360" alt="samsung-galaxy-s10">
+                <div class="truck" ><i class="fa-solid fa-truck"></i></div>
                 <p class="precio">$70.500</p>
                 <p class="descuento">10% OFF</p>
                 <h3 >Samsung galaxy S10</h3>
             </article>
             <article>
                 <img src="img/img-tv-samsung-smart.jpg" width="360" alt="img-tv-samsung-smart">
+                <div class="truck" ><i class="fa-solid fa-truck"></i></div>
                 <p class="precio">$23.200</p>
                 <p class="descuento">5% OFF</p>
                 <h3 >SmartTv Samsung 43"</h3>
@@ -87,24 +93,28 @@ rel="stylesheet" />
          <h2>Seccion de ofertas</h2>
          <article>
             <img src="img/img-cafetera-moulinex.jpg" width="360" alt="img-cafetera-moulinex">
+            <div class="truck" ><i class="fa-solid fa-truck"></i></div>
             <p class="precio">$6770</p>
             <p class="descuento">40% OFF</p>
             <h3 >Cafetera Moulinex</h3>
         </article>
         <article>
             <img src="img/img-macbook-pro-2019.jpg" width="360" alt="macbook">
+            <div class="truck" ><i class="fa-solid fa-truck"></i></div>
             <p class="precio">$230.000</p>
             <p class="descuento">20% OFF</p>
             <h3 >MacBook Pro 2019</h3>
         </article>
         <article>
             <img src="img/img-samsung-galaxy-s10.jpg" width="360" alt="samsung-galaxy-s10">
+            <div class="truck" ><i class="fa-solid fa-truck"></i></div>
             <p class="precio">$70.500</p>
             <p class="descuento">10% OFF</p>
             <h3>Samsung galaxy S10</h3>
         </article>
         <article>
             <img src="img/img-tv-samsung-smart.jpg" width="360" alt="img-tv-samsung-smart">
+            <div class="truck" ><i class="fa-solid fa-truck"></i></div>
             <p class="precio">$23.200</p>
             <p class="descuento">5% OFF</p>
             <h3>SmartTv Samsung 43"</h3>
