--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -19,6 +19,9 @@ Descripciones: 16px */
 
 
 
+*{
+    box-sizing: border-box;
+}
 
 
 header{
@@ -27,9 +30,16 @@ header{
     font-family: "Roboto";
     font-size: 20px;
 }
+.imgMercado{
+    width: 45%;
+    padding-top: 20px;
+    padding-left: 15px;
+}
 .compra{
-    margin-top: 1px;
-    margin-left: 60px
+    margin-top: 0px;
+    margin-left: 80px;
+    padding: 1px;
+    font-size: 15px;
 }
 
 main h2{
@@ -51,17 +61,27 @@ main .descuento{
 main h3{
     font-size: 16px ;
     text-align: left;
+    display: none;
     
 }
+main section h2{
+    text-align: left;
+    margin-left: 15px;
+}
 main{
-    text-align: center;
+    margin-left:  auto ;
+    margin-right: auto;
     width: 90vw;
     background-color: #ebebeb;
     margin-bottom: 20px;
 }
 article img{
     border-bottom: 1px solid #ebebeb;
+    width: 100%;
     
+}
+body nav{
+    display: none;
 }
 .truck i{
     color: #39b54a;
@@ -117,34 +137,45 @@ main article{
 #fname{
     color: #666
 }
-form div i{
+
+.banner{
+    width: 100%;
+}
+form  i{
     background-color: white;
     border: solid #666 1px;
-    padding: 2px
+    padding: 2px;
+    margin-left: 2px
     
 }
 
 form.formulario{
-    padding: 15px;
-    margin : 15px;
-    margin-bottom: 1px;
+    padding: 25px;
+    margin : 1px;
+    margin-bottom: -29px;
+    font-size:17px;
+ 
 }
-
+form input{
+    width: 90%;
+}
 form div{
     margin-bottom: 5px;
 }
 footer {
     text-align: center;
     margin-top: 20px;
+    font-family: "Roboto";
+    margin-left: 0px;
 }
 footer section p {
     color: #666;
     margin-bottom: 50px;
-    margin-left: 20px;
-    margin-right: 32px;
+    margin-left: 1px;
+    margin-right: 1px;
     margin-top: 1px;
-    padding-left: 66px;
-    padding-right: 59px;
+    padding-left: 40px;
+    padding-right: 30px;
 }
 footer h2{
     color: #666;
@@ -154,5 +185,49 @@ footer h2{
 }
 .copy{
     text-align: left;
-    margin: 10px;
+    padding-left: 1px;
+    font-size: 15px;
+}
+
+
+@media (min-width: 361px){
+    *{
+        box-shadow: 0px 0px 10px rgb(100,100,100);
+
+}
+body nav{
+    display: block;
+}
+
+main h3{
+  
+    display: block;
+    
+}
+.menu-burguer{
+    display: none;
+}
+
+
+}
+@media(min-width: 769px ){
+
+    
+    *{
+        box-shadow: 0px 0px 10px rgb(100,100,100);
+
+}
+
+body nav{
+    display: block;
+}
+main h3{
+  
+    display: block;
+    
+}
+.menu-burguer{
+    display: none;
+}
+
 }
