--- a/views/home.html
+++ b/views/home.html
@@ -14,18 +14,19 @@ rel="stylesheet" />
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet">
 <link rel="stylesheet" href="/css/styles.css">
+<link rel="stylesheet" href="/css/normalize.css">
      <title>Mercado Liebre</title>
 </head>
 
 <body>
     <header>
-        <div><img src="img/logo-mercado-liebre.svg" width="100%" alt="logo mercado liebre"></div>
+        <div class="imgMercado"><img  src="img/logo-mercado-liebre.svg" alt="logo mercado liebre"></div>
     
         <form class="formulario" action="/action_page.php">
             <label for="fname"></label>
-            <input type="text" id="fname" name="fname" value="Buscar productos, marcas"><br>
+            <input type="text" id="fname" name="fname" value="Buscar productos, marcas"><i class="fa-solid fa-magnifying-glass"></i><br>
             
-            <div><i class="fa-solid fa-magnifying-glass"></i></div>
+            
         <br> </form>
         
         <div class="compra"><i class="fa-solid fa-hand-holding-dollar"></i>Comprá en cuotas y sin tarjeta de credito </div>
@@ -49,26 +50,28 @@ rel="stylesheet" />
                 <li><a href="#">Mis compras<span class="iconMenu"><i class="fa-solid fa-bag-shopping"></i></span></a></li>
                 
             </ul>
-            <div class="menu-burguer">
-                <i class="fa-solid fa-bars"></i>
+            
                 </div>
 </nav>
+<div class="menu-burguer">
+                <i class="fa-solid fa-bars"></i>
 
+                
     </header>
-    
+    <img class="banner" src="img/img-home-banner.jpg" alt="banner de ofertas">
     <main>
-        <img src="img/img-home-banner.jpg"  width="100%" alt="banner de ofertas">
+        
         <section>
             <h2>Basado en tu ultima vista</h2>
             <article>
-                <img  src="img/img-cafetera-moulinex.jpg" width="360" alt="cafetera">
+                <img  src="img/img-cafetera-moulinex.jpg"  alt="cafetera">
                 <div class="truck" ><i class="fa-solid fa-truck"></i></div>
                 <p class="precio">$6770</p>
                 <p class="descuento">40% OFF</p>
                 <h3>Cafetera Moulinex</h3>
             </article>
             <article>
-                <img  src="img/img-macbook-pro-2019.jpg" width="360" alt="macbook">
+                <img  src="img/img-macbook-pro-2019.jpg" alt="macbook">
                 <div class="truck" ><i class="fa-solid fa-truck"></i></div>
                 
                 <p class="precio">$230.000</p>
