--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -20,14 +20,15 @@ Descripciones: 16px */
 
 
 *{
+    margin: 0px;
+    padding: 0px;
     box-sizing: border-box;
-}
-
-body nav{
+    }
+body nav {
     display: none;
 }
 
-.banner{
+.banner {
     width: 100%;
 }
 
@@ -37,7 +38,7 @@ body nav{
 
 
 /*----------------------------------- COMIENZO HEADER-----------------------------*/
-header{
+header {
     background-color: #EAC926;
     background-size: cover;
     font-family: "Roboto";
@@ -45,22 +46,23 @@ header{
     padding: 10px;
 }
 
-.imgMercado{
-    width: 45%;
+.imgMercado {
+    width: 50%;
     padding-top: 20px;
     padding-left: 15px;
-}   
-.burguer i{
-background-color: #1259c3;
-color: white;
-display: block;
-max-width: 40px;
-padding: 10px ;
-border-radius: 8px;
-text-align: center;
-font-size: 18px;
-margin: auto;
-padding-bottom: 10px;
+}
+
+.burguer i {
+    background-color: #1259c3;
+    color: white;
+    display: block;
+    max-width: 40px;
+    padding: 10px;
+    border-radius: 8px;
+    text-align: center;
+    font-size: 18px;
+    margin: auto;
+    padding-bottom: 10px;
 }
 
 /* .menu-burguer i {
@@ -72,74 +74,79 @@ padding-bottom: 10px;
     padding: 10px;
     text-align: center;
 } */
-.main-nav ul{
+.main-nav ul {
     list-style: none;
-    
+
     margin: 10px;
     padding: 0;
-    
+
 }
-.main-nav a{
+
+.main-nav a {
     color: black;
     text-decoration: none;
     display: inline-block;
     padding: 5px 0px;
-    
+
 }
 
-form  i{
+.lupa {
     background-color: white;
-    display: flex;
-   margin: auto;
-   padding: 12px;
-   flex: wrap;
-    
+  align-items: center;
+  display: flex;
+  padding: 3px;
+  margin-bottom: 0px;
 }
 
-#fname{
+
+
+
+#fname {
     color: #666;
     border: white solid 1px;
 }
-form.formulario{
-    padding: 25px;
-    margin : 1px;
-    margin-bottom: -29px;
-    font-size:17px;
- display: flex;
- border: 0px white solid;
 
- flex: wrap;
- ;
+.formulario {
+    padding: 25px;
+    margin-right: 10px;
+    margin-bottom: -29px;
+    font-size: 17px;
+    display: flex;
+    
+    width: 50%;
 }
 
-form input{
-    width: 30vw;
+form input {
+    width: 100%;
     padding-right: 0px;
     display: flex;
-    flex: wrap;
+
 
 }
-form div{
+
+form div {
     margin-bottom: 5px;
 }
 
 
-.compra{
+.compra {
     margin-top: 0px;
     margin-left: 25px;
     padding: 1px;
     font-size: 15px;
     font-weight: normal;
-   margin-top: auto;
+    margin-top: auto;
 }
-.img-form{
+
+.img-form {
     display: flex;
     flex: wrap;
     margin-bottom: 30px;
     margin-top: -10px;
+    width: 100%;
 }
 
-.iconMenu{
+.iconMenu {
     color: black;
     margin: 3px;
 }
@@ -150,53 +157,58 @@ form div{
 
 
 /*-------------------------------------- INICIO MAIN-----------------------------------*/
-main h2{
+main h2 {
     font-size: 24px;
 }
-main .precio{
+
+main .precio {
     font-size: 18px;
-  text-align: left;
-  margin-bottom: 1px;
-  margin-top: 1px;
+    text-align: left;
+    margin-bottom: 1px;
+    margin-top: 1px;
 }
-main .descuento{
+
+main .descuento {
     font-size: 16px;
     color: #39b54a;
     text-align: left;
     margin-top: 1px
-    
 }
-main h3{
-    font-size: 16px ;
+
+main h3 {
+    font-size: 16px;
     text-align: left;
-    display: none;
-    
+   padding-top: 15px;
+
 }
-main section h2{
+
+main section h2 {
     text-align: left;
     margin-left: 15px;
 }
-main{
-    margin-left:  auto ;
+
+main {
+    margin-left: auto;
     margin-right: auto;
     width: 90vw;
     background-color: #ebebeb;
     margin-bottom: 20px;
 }
 
-article img{
+article img {
     border-bottom: 1px solid #ebebeb;
     width: 100%;
-    
+
 }
 
-main article{
+main article {
     border-top: 1px solid #ebebeb;
     margin: 10px;
     padding: 15px;
     background-color: white;
 }
-.truck i{
+
+.truck i {
     color: #39b54a;
     border: 1px solid #39b54a;
     padding: 15px;
@@ -204,20 +216,44 @@ main article{
 
 
 }
-.truck{
-    text-align: left;
+
+.truck {
+    text-align: right;
     margin: 1px;
 }
+.prec-desc{
 
+    display: flex;
+    flex-wrap: wrap;
+    
+}
+.prec-desc .precio{
+    width: 30%;
+}
+.prec-desc .descuento{
+    width: 70%;
+    padding-left: 5px;
+    
+}
 
+.section-product{
+    display: flex;
+    flex-wrap: wrap;
+    width: 100%;
+    
+
+}
+.product{
+width: 100%;
+}
 
 
 
 /*-------------------------------------- FIN MAIN   -----------------------------------*/
 
 /*-------------------------------------- INICIO FOOTER-----------------------------------*/
-.iconFooter{
-    color:#1259c3;
+.iconFooter {
+    color: #1259c3;
     margin-bottom: 10px;
     font-size: 2em;
     text-align: center;
@@ -229,6 +265,7 @@ footer {
     font-family: "Roboto";
     margin-left: 0px;
 }
+
 footer section p {
     color: #666;
     margin-bottom: 50px;
@@ -238,13 +275,15 @@ footer section p {
     padding-left: 40px;
     padding-right: 30px;
 }
-footer h2{
+
+footer h2 {
     color: #666;
-    
+
     margin-bottom: 0px;
     margin-top: 10px;
 }
-.copy{
+
+.copy {
     text-align: left;
     padding-left: 1px;
     font-size: 15px;
@@ -256,115 +295,130 @@ footer h2{
 
 
 /*-------------------------------------- INICIO MEDIA QUERI 361 768-----------------------------------*/
-@media (min-width: 361px){
+@media (min-width: 361px) {
+
     /* *{
         box-shadow: 0px 0px 10px rgb(100,100,100);
 
 } */
-body nav{
-    display: block;
+    body nav {
+        display: block;
+    }
+
+    main h3 {
+
+        display: block;
+
+    }
+
+    .burguer {
+        display: none;
+    }
+
+   
+
+    
+
+    /*-------------------------------------- FIN MEDIA QUERI 361 768-----------------------------------*/
+
+    /*-------------------------------------- INICIO MEDIA QUERI 769  1199-----------------------------------*/
+
 }
 
-main h3{
+@media(min-width: 769px) {
+
+
+
+
+    .imgMercado {
+        width: 180px;
+    }
+
   
-    display: block;
-    
-}
-.burguer{
-    display: none;
-}
-.formulario{
-    display: flex;
-}
 
-/*-------------------------------------- FIN MEDIA QUERI 361 768-----------------------------------*/
+    .top-bar {
+        display: flex;
+        justify-content: space-between;
 
-/*-------------------------------------- INICIO MEDIA QUERI 769  INFINITO-----------------------------------*/
+    }
 
-}
-@media(min-width: 769px ){
-
-    
- 
-
-.imgMercado{
-    width: 180px;
-}
-.formulario{
-    display: flex;
-}
-
-.top-bar{
-display: flex;
-justify-content: space-between;
-
-}
-.compra{
-    
-
-font-size: 25px;
-text-align: right;
-padding-left: 0px;
-margin-top: auto;
-margin-left: 0px;
-
-}
-.top-bar h2{
-    padding-left: 0px;
-}
+    .compra {
 
 
-.main-nav{
-    display: flex;
-    justify-content: space-between;
+        font-size: 25px;
+        text-align: right;
+        padding-left: 0px;
+        margin-top: auto;
+        margin-left: 0px;
+
+    }
+
+    .top-bar h2 {
+        padding-left: 0px;
+        margin-left: -150px;
+    }
+
+
+    .main-nav {
+        display: flex;
+        justify-content: space-between;
+
+    }
+
+    .main-nav ul {
+        display: flex;
+        font-size: 18px;
+    }
+
+    .main-nav li {
+        margin: 0 4px
+    }
+
+    main h3 {
+
+        display: block;
+
+    }
+
+    .burguer {
+        display: none;
+    }
+
+   
+    .product{
+        width: 44%;
+    }
 
 }
 
-.main-nav ul{
-    display: flex;
-    font-size: 18px;
-}
-
-.main-nav li{
-    margin: 0 4px
-}
-main h3{
-  
-    display: block;
-    
-}
-.burguer{
-    display: none;
-}
-
-}
 /*-------------------------------------- FIN MEDIA QUERI 768 1199-----------------------------------*/
 
 /*-------------------------------------- INICIO MEDIA QUERI 1200 INFINITO-----------------------------------*/
-@media (min-width: 1200px ){
+@media (min-width: 1200px) {
 
-.top-bar, .main-nav{
-max-width: 1200px;
+    
+    .main-nav {
+        max-width: 1200px;
 
-margin: auto;
+        margin: auto;
     }
 
-    .main-nav li{
-       font-size: 19px;
-   }
-.compra{
-    align-items: flex-end;
-  
+    .main-nav li {
+        font-size: 19px;
+    }
+
+    .compra{
+        width: 50%;
+        padding-left: 0%;
+    }
+
     
-}
-
-.top-bar{
-   
-    display: flex;
-    align-items: flex-end;
+.product{
+    width: 22%;
 }
 
 }
+
 
 
 /*-------------------------------------- FIN MEDIA QUERI 1200 INFINITO-----------------------------------*/
