--- a/views/home.html
+++ b/views/home.html
@@ -19,19 +19,19 @@
     <header class="main-header">
         <div class="top-bar">
 
-<div class="img-form">
-    <img src="img/logo-mercado-liebre.svg" alt="logo mercado liebre" class="imgMercado">
+            <div class="img-form">
+                <img src="img/logo-mercado-liebre.svg" alt="logo mercado liebre" class="imgMercado">
 
-    <form class="formulario" action="/action_page.php">
-        <label for="fname"></label>
-        <input type="text" id="fname" name="fname" value="Buscar productos, marcas" >
-        <i class="fa-solid fa-magnifying-glass"></i><br>
-        <br>
-    </form>
+                <form class="formulario" action="/action_page.php">
+                    <label for="fname"></label>
+                    <input type="text" id="fname" name="fname" value="Buscar productos, marcas">
+                    <div class="lupa"><i class="fa-solid fa-magnifying-glass"></i></div>
+                    <br>
+                </form>
 
 
-</div>
-            
+            </div>
+
             <h2 class="compra"><i class="fa-solid fa-hand-holding-dollar"></i>
                 Comprá en cuotas y sin tarjeta de credito
             </h2>
@@ -40,25 +40,14 @@
         </div>
 
 
-
-
-
-
-
-
         <nav class="main-nav">
             <ul class="lista-superior">
-
-
-
 
 
                 <li class="ofertas"><a href="#">Ofertas</a></li>
                 <li><a href="#">Tiendas oficiales</a></li>
                 <li><a href="#">Vender</a></li>
                 <li><a href="#">Ayuda</a></li>
-
-
 
             </ul>
 
@@ -71,10 +60,9 @@
                 <li><a href="#">Mis compras<span class="iconMenu"><i class="fa-solid fa-bag-shopping"></i></span></a>
                 </li>
 
-
             </ul>
 
-            </div>
+
         </nav>
 
         <a href="#" class="burguer">
@@ -90,67 +78,134 @@
     <main>
 
         <section>
+
+
             <h2>Basado en tu ultima vista</h2>
-            <article>
-                <img src="img/img-cafetera-moulinex.jpg" alt="cafetera">
-                <div class="truck"><i class="fa-solid fa-truck"></i></div>
-                <p class="precio">$6770</p>
-                <p class="descuento">40% OFF</p>
-                <h3>Cafetera Moulinex</h3>
-            </article>
-            <article>
-                <img src="img/img-macbook-pro-2019.jpg" alt="macbook">
-                <div class="truck"><i class="fa-solid fa-truck"></i></div>
+            <div class="section-product">
+                <article class="product">
+                    <img src="img/img-cafetera-moulinex.jpg" alt="cafetera">
+                    <div class="truck"><i class="fa-solid fa-truck"></i></div>
+                    <div class="prec-desc">
+                        <p class="precio">$6770</p>
+                        <p class="descuento">40% OFF</p>
 
-                <p class="precio">$230.000</p>
-                <p class="descuento">20% OFF</p>
-                <h3>MacBook Pro 2019</h3>
-            </article>
-            <article>
-                <img src="img/img-samsung-galaxy-s10.jpg" width="360" alt="samsung-galaxy-s10">
-                <div class="truck"><i class="fa-solid fa-truck"></i></div>
-                <p class="precio">$70.500</p>
-                <p class="descuento">10% OFF</p>
-                <h3>Samsung galaxy S10</h3>
-            </article>
-            <article>
-                <img src="img/img-tv-samsung-smart.jpg" width="360" alt="img-tv-samsung-smart">
-                <div class="truck"><i class="fa-solid fa-truck"></i></div>
-                <p class="precio">$23.200</p>
-                <p class="descuento">5% OFF</p>
-                <h3>SmartTv Samsung 43"</h3>
-            </article>
+                    </div>
+
+                    <h3>Cafetera Moulinex</h3>
+                </article>
+                <article class="product">
+                    <img src="img/img-macbook-pro-2019.jpg" alt="macbook">
+                    <div class="truck"><i class="fa-solid fa-truck"></i></div>
+
+
+
+                    <div class="prec-desc">
+                        <p class="precio">$230.000</p>
+                        <p class="descuento">20% OFF</p>
+
+
+                    </div>
+                    <h3>MacBook Pro 2019</h3>
+                </article>
+                <article class="product">
+                    <img src="img/img-samsung-galaxy-s10.jpg" width="360" alt="samsung-galaxy-s10">
+                    <div class="truck"><i class="fa-solid fa-truck"></i></div>
+
+
+
+                    <div class="prec-desc">
+                        <p class="precio">$70.500</p>
+                        <p class="descuento">10% OFF</p>
+                    </div>
+
+                    <h3>Samsung galaxy S10</h3>
+                </article>
+                <article class="product">
+                    <img src="img/img-tv-samsung-smart.jpg" width="360" alt="img-tv-samsung-smart">
+                    <div class="truck"><i class="fa-solid fa-truck"></i></div>
+
+
+                    <div class="prec-desc">
+                        <p class="precio">$23.200</p>
+                        <p class="descuento">5% OFF</p>
+
+                    </div>
+
+
+                    <h3>SmartTv Samsung 43"</h3>
+                </article>
         </section>
-        <h2>Seccion de ofertas</h2>
-        <article>
-            <img src="img/img-cafetera-moulinex.jpg" width="360" alt="img-cafetera-moulinex">
-            <div class="truck"><i class="fa-solid fa-truck"></i></div>
-            <p class="precio">$6770</p>
-            <p class="descuento">40% OFF</p>
-            <h3>Cafetera Moulinex</h3>
-        </article>
-        <article>
-            <img src="img/img-macbook-pro-2019.jpg" width="360" alt="macbook">
-            <div class="truck"><i class="fa-solid fa-truck"></i></div>
-            <p class="precio">$230.000</p>
-            <p class="descuento">20% OFF</p>
-            <h3>MacBook Pro 2019</h3>
-        </article>
-        <article>
-            <img src="img/img-samsung-galaxy-s10.jpg" width="360" alt="samsung-galaxy-s10">
-            <div class="truck"><i class="fa-solid fa-truck"></i></div>
-            <p class="precio">$70.500</p>
-            <p class="descuento">10% OFF</p>
-            <h3>Samsung galaxy S10</h3>
-        </article>
-        <article>
-            <img src="img/img-tv-samsung-smart.jpg" width="360" alt="img-tv-samsung-smart">
-            <div class="truck"><i class="fa-solid fa-truck"></i></div>
-            <p class="precio">$23.200</p>
-            <p class="descuento">5% OFF</p>
-            <h3>SmartTv Samsung 43"</h3>
-        </article>
+        </div>
 
+        <section>
+
+
+            <h2>Seccion de ofertas</h2>
+
+            <div class="section-product">
+
+
+
+
+                <article class="product">
+                    <img src="img/img-cafetera-moulinex.jpg" width="360" alt="img-cafetera-moulinex">
+                    <div class="truck"><i class="fa-solid fa-truck"></i></div>
+
+                    <div class="prec-desc">
+                        <p class="precio">$6770</p>
+                        <p class="descuento">40% OFF</p>
+
+                    </div>
+
+
+                    <h3>Cafetera Moulinex</h3>
+                </article>
+                <article class="product">
+                    <img src="img/img-macbook-pro-2019.jpg" width="360" alt="macbook">
+                    <div class="truck"><i class="fa-solid fa-truck"></i></div>
+
+
+                    <div class="prec-desc">
+                        <p class="precio">$230.000</p>
+                        <p class="descuento">20% OFF</p>
+
+
+                    </div>
+
+                    <h3>MacBook Pro 2019</h3>
+                </article>
+                <article class="product">
+                    <img src="img/img-samsung-galaxy-s10.jpg" width="360" alt="samsung-galaxy-s10">
+                    <div class="truck"><i class="fa-solid fa-truck"></i></div>
+
+
+
+                    <div class="prec-desc">
+                        <p class="precio">$70.500</p>
+                        <p class="descuento">10% OFF</p>
+
+                    </div>
+
+                    <h3>Samsung galaxy S10</h3>
+                </article>
+                <article class="product">
+                    <img src="img/img-tv-samsung-smart.jpg" width="360" alt="img-tv-samsung-smart">
+                    <div class="truck"><i class="fa-solid fa-truck"></i></div>
+
+
+
+                    <div class="prec-desc">
+                        <p class="precio">$23.200</p>
+                        <p class="descuento">5% OFF</p>
+
+                    </div>
+
+
+                    <h3>SmartTv Samsung 43"</h3>
+                </article>
+
+            </div>
+        </section>
     </main>
     <footer>
         <section>
